--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>TemperatureConverter</members>
-        <members>TemperatureConverterTest</members>
-        <name>ApexClass</name>
+        <members>Case.Origin</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Case.ChanduDev1recordtype</members>
+        <name>RecordType</name>
     </types>
     <version>57.0</version>
 </Package>
