US-0000024: standard picklist deactivation changes

--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
         <name>CustomField</name>
     </types>
     <types>
-        <members>Case.ChanduDev1recordtype</members>
+        <members>Case.ChanduDev1recordtypenotsupport</members>
         <name>RecordType</name>
     </types>
     <types>
