US-0000030: new  permission  deployment

--- a/package.xml
+++ b/package.xml
@@ -4,5 +4,9 @@
         <members>Chandupermissionset</members>
         <name>PermissionSet</name>
     </types>
+    <types>
+        <members>Chandanatestprofile</members>
+        <name>Profile</name>
+    </types>
     <version>57.0</version>
 </Package>
