--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>Pavan_permission_set</members>
+        <name>PermissionSet</name>
+    </types>
+    <types>
         <members>Pavan Profile</members>
         <name>Profile</name>
     </types>
