--- a/package.xml
+++ b/package.xml
@@ -17,5 +17,13 @@
         <members>chandutestobject__c.All</members>
         <name>ListView</name>
     </types>
+    <types>
+        <members>Admin</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>chandutestobject__c</members>
+        <name>SharingRules</name>
+    </types>
     <version>57.0</version>
 </Package>
