--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Chandupermissionset</members>
-        <name>PermissionSet</name>
+        <members>duplicateobjectindev1anduat__c</members>
+        <name>CustomObject</name>
     </types>
     <types>
-        <members>Chandanatestprofile</members>
-        <name>Profile</name>
+        <members>duplicateobjectindev1anduat__c-duplicateobjectindev1anduat Layout</members>
+        <name>Layout</name>
     </types>
-    <version>57.0</version>
+    <version>58.0</version>
 </Package>
