--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,12 @@
     <types>
         <members>Account.school__c</members>
         <members>chanduFLSTestObject__c.First_Name__c</members>
+        <members>chanduFLSTestObject__c.Last_Name__c</members>
         <name>CustomField</name>
+    </types>
+    <types>
+        <members>chandutestobject__c</members>
+        <name>CustomObject</name>
     </types>
     <version>58.0</version>
 </Package>
