--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,8 @@
         <members>chanduFLSTestObject__c.First_Name__c</members>
         <members>chanduFLSTestObject__c.Last_Name__c</members>
         <members>chanduFLSTestObject__c.Marital_Status__c</members>
+        <members>chandutestobject__c.Mynumber__c</members>
+        <members>chandutestobject__c.nation__c</members>
         <name>CustomField</name>
     </types>
     <version>58.0</version>
