--- a/package.xml
+++ b/package.xml
@@ -1,119 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountContactRole</members>
-        <members>AccountOwnership</members>
-        <members>AccountRating</members>
-        <members>AccountRating</members>
-        <members>AccountType</members>
-        <members>AssetActionCategory</members>
-        <members>AssetRelationshipType</members>
-        <members>AssetStatus</members>
-        <members>AssociatedLocationType</members>
-        <members>CampaignMemberStatus</members>
-        <members>CampaignStatus</members>
-        <members>CampaignType</members>
-        <members>CaseOrigin</members>
-        <members>CasePriority</members>
-        <members>CaseReason</members>
-        <members>CaseStatus</members>
-        <members>CaseType</members>
-        <members>ChangeRequestBusinessReason</members>
-        <members>ChangeRequestCategory</members>
-        <members>ChangeRequestImpact</members>
-        <members>ChangeRequestPriority</members>
-        <members>ChangeRequestRelatedItemImpactLevel</members>
-        <members>ChangeRequestRiskLevel</members>
-        <members>ChangeRequestStatus</members>
-        <members>ContactPointAddressType</members>
-        <members>ContactPointUsageType</members>
-        <members>ContactRequestReason</members>
-        <members>ContactRequestStatus</members>
-        <members>ContactRole</members>
-        <members>ContactRole</members>
-        <members>ContractContactRole</members>
-        <members>ContractLineItemStatus</members>
-        <members>ContractStatus</members>
-        <members>ECTypeContactPointType</members>
-        <members>EntitlementType</members>
-        <members>EventSubject</members>
-        <members>IdeaMultiCategory</members>
-        <members>IdeaStatus</members>
-        <members>IncidentCategory</members>
-        <members>IncidentImpact</members>
-        <members>IncidentPriority</members>
-        <members>IncidentRelatedItemImpactLevel</members>
-        <members>IncidentRelatedItemImpactType</members>
-        <members>IncidentReportedMethod</members>
-        <members>IncidentStatus</members>
-        <members>IncidentSubCategory</members>
-        <members>IncidentType</members>
-        <members>IncidentUrgency</members>
-        <members>Industry</members>
-        <members>Industry</members>
-        <members>InvoiceStatus</members>
-        <members>LeadSource</members>
-        <members>LeadSource</members>
-        <members>LeadSource</members>
-        <members>LeadSource</members>
-        <members>LeadSource</members>
-        <members>LeadStatus</members>
-        <members>LocationType</members>
-        <members>MilitaryService</members>
-        <members>OpportunityCompetitor</members>
-        <members>OpportunityStage</members>
-        <members>OpportunityType</members>
-        <members>OrderStatus</members>
-        <members>OrderType</members>
-        <members>PartnerRole</members>
-        <members>ProblemCategory</members>
-        <members>ProblemImpact</members>
-        <members>ProblemPriority</members>
-        <members>ProblemRelatedItemImpactLevel</members>
-        <members>ProblemRelatedItemImpactType</members>
-        <members>ProblemStatus</members>
-        <members>ProblemSubCategory</members>
-        <members>ProblemUrgency</members>
-        <members>ProcessExceptionCategory</members>
-        <members>ProcessExceptionPriority</members>
-        <members>ProcessExceptionSeverity</members>
-        <members>ProcessExceptionStatus</members>
-        <members>Product2Family</members>
-        <members>ProductLineEnum</members>
-        <members>QuantityUnitOfMeasure</members>
-        <members>QuantityUnitOfMeasure</members>
-        <members>QuantityUnitOfMeasure</members>
-        <members>QuickTextCategory</members>
-        <members>QuickTextChannel</members>
-        <members>ResourceAbsenceType</members>
-        <members>ReturnOrderLineItemProcessPlan</members>
-        <members>ReturnOrderLineItemReasonForRejection</members>
-        <members>ReturnOrderLineItemReasonForReturn</members>
-        <members>ReturnOrderLineItemRepaymentMethod</members>
-        <members>ReturnOrderShipmentType</members>
-        <members>ReturnOrderStatus</members>
-        <members>Salutation</members>
-        <members>Salutation</members>
-        <members>Salutation</members>
-        <members>Salutation</members>
-        <members>Salutation</members>
-        <members>ServTerrMemRoleType</members>
-        <members>ServiceAppointmentStatus</members>
-        <members>ServiceContractApprovalStatus</members>
-        <members>ShiftStatus</members>
-        <members>SolutionStatus</members>
-        <members>TaskPriority</members>
-        <members>TaskStatus</members>
-        <members>TaskSubject</members>
-        <members>UnitOfMeasure</members>
-        <members>WorkOrderLineItemPriority</members>
-        <members>WorkOrderLineItemStatus</members>
-        <members>WorkOrderPriority</members>
-        <members>WorkOrderStatus</members>
-        <members>WorkStepStatus</members>
-        <members>WorkTypeDefApptType</members>
-        <members>WorkTypeGroupAddInfo</members>
-        <name>StandardValueSet</name>
+        <members>Account</members>
+        <members>AccountIntelligence</members>
+        <members>Actions</members>
+        <members>Activities</members>
+        <members>Address</members>
+        <members>Ai4m</members>
+        <members>Analytics</members>
+        <members>Apex</members>
+        <members>AppAnalytics</members>
+        <members>AppExperience</members>
+        <members>Blockchain</members>
+        <members>Bot</members>
+        <members>BusinessHours</members>
+        <members>Campaign</members>
+        <members>Case</members>
+        <members>Chatter</members>
+        <members>ChatterEmailsMD</members>
+        <members>CodeBuilder</members>
+        <members>CollectionsDashboard</members>
+        <members>Commerce</members>
+        <members>Communities</members>
+        <members>Company</members>
+        <members>ConnectedApp</members>
+        <members>Content</members>
+        <members>Contract</members>
+        <members>ConversationalIntelligence</members>
+        <members>Currency</members>
+        <members>CustomAddressField</members>
+        <members>CustomerDataPlatform</members>
+        <members>CustomizablePropensityScoring</members>
+        <members>DataDotCom</members>
+        <members>Deployment</members>
+        <members>DevHub</members>
+        <members>Discovery</members>
+        <members>DocumentChecklist</members>
+        <members>DynamicForms</members>
+        <members>EAC</members>
+        <members>EinsteinDocumentCapture</members>
+        <members>EmailAdministration</members>
+        <members>EmailIntegration</members>
+        <members>EmailTemplate</members>
+        <members>EmployeeFieldAccess</members>
+        <members>EmployeeUser</members>
+        <members>EncryptionKey</members>
+        <members>EnhancedNotes</members>
+        <members>Entitlement</members>
+        <members>Essentials</members>
+        <members>Event</members>
+        <members>ExperienceBundle</members>
+        <members>ExternalClientApp</members>
+        <members>FieldService</members>
+        <members>FileUploadAndDownloadSecurity</members>
+        <members>FilesConnect</members>
+        <members>Flow</members>
+        <members>Forecasting</members>
+        <members>Formula</members>
+        <members>GoogleApps</members>
+        <members>HighVelocitySales</members>
+        <members>Ideas</members>
+        <members>IdentityProvider</members>
+        <members>IncidentMgmt</members>
+        <members>Industries</members>
+        <members>IndustriesEinsteinFeature</members>
+        <members>InvLatePymntRiskCalc</members>
+        <members>Inventory</members>
+        <members>InvocableAction</members>
+        <members>Knowledge</members>
+        <members>KnowledgeGeneration</members>
+        <members>Language</members>
+        <members>LeadConfig</members>
+        <members>LightningExperience</members>
+        <members>LiveAgent</members>
+        <members>LiveMessage</members>
+        <members>Macro</members>
+        <members>MailMerge</members>
+        <members>Meetings</members>
+        <members>Mobile</members>
+        <members>MyDomain</members>
+        <members>Name</members>
+        <members>Notifications</members>
+        <members>OauthOidc</members>
+        <members>ObjectLinking</members>
+        <members>OmniChannel</members>
+        <members>OmniChannelPricing</members>
+        <members>Opportunity</members>
+        <members>Order</members>
+        <members>OrderManagement</members>
+        <members>Org</members>
+        <members>Pardot</members>
+        <members>PardotEinstein</members>
+        <members>PartyDataModel</members>
+        <members>PathAssistant</members>
+        <members>PaymentsManagementEnabled</members>
+        <members>Picklist</members>
+        <members>PlatformEncryption</members>
+        <members>PlatformEvent</members>
+        <members>Portals</members>
+        <members>PredictionBuilder</members>
+        <members>Privacy</members>
+        <members>Product</members>
+        <members>QuickText</members>
+        <members>Quote</members>
+        <members>RealTimeEvent</members>
+        <members>RecommendationBuilder</members>
+        <members>RecordPage</members>
+        <members>RetailExecution</members>
+        <members>Sandbox</members>
+        <members>SceGlobalModelOptOut</members>
+        <members>Schema</members>
+        <members>Search</members>
+        <members>Security</members>
+        <members>ServiceCloudVoice</members>
+        <members>ServiceSetupAssistant</members>
+        <members>Sharing</members>
+        <members>Site</members>
+        <members>SourceTracking</members>
+        <members>Survey</members>
+        <members>SystemNotification</members>
+        <members>Territory2</members>
+        <members>Trailhead</members>
+        <members>TrialOrg</members>
+        <members>UserEngagement</members>
+        <members>UserInterface</members>
+        <members>UserManagement</members>
+        <members>Voice</members>
+        <members>WebToX</members>
+        <members>WorkDotCom</members>
+        <name>Settings</name>
     </types>
-    <version>59.0</version>
+    <version>60.0</version>
 </Package>
