--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
         <name>CustomLabel</name>
     </types>
     <types>
-        <members>it</members>
+        <members>pt_BR</members>
         <name>Translations</name>
     </types>
     <version>62.0</version>
