--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.Darwin__c</members>
-        <name>CustomField</name>
+        <members>unfiled$public/SalesforceSchedulerModifyApptEmailTemplate</members>
+        <members>unfiled$public/partner_welcome_template</members>
+        <name>EmailTemplate</name>
+    </types>
+    <types>
+        <members>Account-Account %28Sales%29 Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>SolutionManager</members>
+        <name>Profile</name>
     </types>
     <version>62.0</version>
 </Package>
